test/fixtures/good/accessors.roy
let arr = [1, 2, 3]
console.log (arr @ 1)

let obj = {answer: 42}
console.log obj.answer
