test/fixtures/bad/structure_function_access.roy
let o a b = {a: a, b: b}

(o 1 2).c
